--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!doctype html>
 <html lang="he" dir="rtl">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
     <title>LooZ</title>
-    <!-- Example font (Rubik). Keep/replace as you like. -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700;800&display=swap" />
+    <link rel="icon" href="/favicon.ico" />
+    <!-- (optional) fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700;900&family=Rubik:wght@400;600;800&display=swap" rel="stylesheet">
   </head>
-  <body class="looz is-light" data-view="home">
+  <body>
     <div id="app"></div>
-
+    <!-- Vite loads your app here -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
