--- a/index.html
+++ b/index.html
@@ -1,37 +1,81 @@
 <!doctype html>
 <html lang="he" dir="rtl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>LooZ</title>
-  <link rel="icon" href="/favicon.ico" />
-  <!-- (optional) fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700;900&family=Rubik:wght@400;600;800&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,viewport-fit=cover,maximum-scale=1"
+    />
+    <title>LooZ</title>
 
-  <!-- Early theme application: prevents light flash on refresh -->
-  <script>
-  (function () {
-    try {
-      var KEY = 'looz.theme';
-      var t = localStorage.getItem(KEY);
+    <link rel="icon" href="/favicon.ico" />
 
-      // Default to system preference if user didn't pick yet
-      if (!t) {
-        t = (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) ? 'dark' : 'light';
-      }
+    <!-- (optional) fonts — kept from your version -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700;900&family=Rubik:wght@400;600;800&display=swap"
+      rel="stylesheet"
+    >
 
-      var root = document.documentElement; // <html>
-      root.classList.toggle('is-dark', t === 'dark');
-      root.setAttribute('data-theme', t);
-    } catch (_) {}
-  })();
-  </script>
-</head>
-<body>
-  <div id="app"></div>
-  <!-- Vite loads your app here -->
-  <script type="module" src="/src/main.js"></script>
-</body>
+    <!-- Content Security Policy: tuned for Firebase + Vite dev/build -->
+<meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  script-src 'self' https://apis.google.com https://www.gstatic.com;
+  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+  img-src 'self' data: blob: https:;
+  font-src 'self' https://fonts.gstatic.com data:;
+  connect-src 'self'
+    https://firestore.googleapis.com
+    https://identitytoolkit.googleapis.com
+    https://securetoken.googleapis.com
+    https://firebasestorage.googleapis.com
+    https://*.googleapis.com
+    https://*.firebaseio.com
+    https://accounts.google.com
+    https://www.googleapis.com;
+  frame-src 'self' https://accounts.google.com https://*.gstatic.com https://*.google.com;
+  media-src 'self' https:;
+  object-src 'none';
+  frame-ancestors 'none';
+  base-uri 'self';
+">
+
+
+
+
+    <!-- Early theme application: prevents light-flash on refresh (kept) -->
+    <script>
+      (function () {
+        try {
+          var KEY = 'looz.theme';
+          var t = localStorage.getItem(KEY);
+          if (!t) {
+            t = (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches)
+              ? 'dark' : 'light';
+          }
+          var root = document.documentElement;
+          root.classList.toggle('is-dark', t === 'dark');
+          root.setAttribute('data-theme', t);
+        } catch (_) {}
+      })();
+    </script>
+
+    <!-- (optional) PWA manifest hook — safe to leave commented until we add it
+    <link rel="manifest" href="/manifest.webmanifest">
+    -->
+  </head>
+  <body>
+    <div id="app"></div>
+
+    <!-- IMPORTANT:
+         We removed the Firebase CDN bootstrapping you had here to avoid
+         *double initialization*. Your app already initializes Firebase once
+         in /src/core/firebase.js using the npm 'firebase' package. Keep your
+         keys in .env.local as VITE_FB_* (as you’ve been doing).
+    -->
+
+    <!-- Vite entry -->
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
