--- a/index.html
+++ b/index.html
@@ -18,30 +18,26 @@
       rel="stylesheet"
     >
 
-    <!-- Content Security Policy: tuned for Firebase + Vite dev/build -->
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
-  script-src 'self' https://apis.google.com https://www.gstatic.com;
-  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-  img-src 'self' data: blob: https:;
-  font-src 'self' https://fonts.gstatic.com data:;
+  script-src 'self' 'unsafe-inline' https://apis.google.com https://www.gstatic.com;
+  style-src  'self' 'unsafe-inline';
+  img-src    'self' data: blob: https:;
+  font-src   'self' https://fonts.gstatic.com data:;
   connect-src 'self'
     https://firestore.googleapis.com
     https://identitytoolkit.googleapis.com
     https://securetoken.googleapis.com
     https://firebasestorage.googleapis.com
-    https://*.googleapis.com
-    https://*.firebaseio.com
+    https://www.googleapis.com
+    https://apis.google.com
     https://accounts.google.com
-    https://www.googleapis.com;
-  frame-src 'self' https://accounts.google.com https://*.gstatic.com https://*.google.com;
-  media-src 'self' https:;
+    https://*.googleapis.com;
+  frame-src 'self' https://accounts.google.com https://*.gstatic.com https://*.google.com https://looz-11581.firebaseapp.com https://looz-11581.web.app;
+  media-src  'self' https:;
   object-src 'none';
-  frame-ancestors 'none';
-  base-uri 'self';
+  base-uri   'self';
 ">
-
-
 
 
     <!-- Early theme application: prevents light-flash on refresh (kept) -->
@@ -76,6 +72,10 @@
     -->
 
     <!-- Vite entry -->
+     <!-- keep it before /src/main.js -->
+<script src="/firebase-config.js"></script>
+<script type="module" src="/src/main.js"></script>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
