--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" href="/favicon.ico" />
 
-    <!-- (optional) fonts — kept from your version -->
+    <!-- Optional Google fonts (safe to keep) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -18,29 +18,29 @@
       rel="stylesheet"
     >
 
-<meta http-equiv="Content-Security-Policy" content="
-  default-src 'self';
-  script-src 'self' 'unsafe-inline' https://apis.google.com https://www.gstatic.com;
-  style-src  'self' 'unsafe-inline';
-  img-src    'self' data: blob: https:;
-  font-src   'self' https://fonts.gstatic.com data:;
-  connect-src 'self'
-    https://firestore.googleapis.com
-    https://identitytoolkit.googleapis.com
-    https://securetoken.googleapis.com
-    https://firebasestorage.googleapis.com
-    https://www.googleapis.com
-    https://apis.google.com
-    https://accounts.google.com
-    https://*.googleapis.com;
-  frame-src 'self' https://accounts.google.com https://*.gstatic.com https://*.google.com https://looz-11581.firebaseapp.com https://looz-11581.web.app;
-  media-src  'self' https:;
-  object-src 'none';
-  base-uri   'self';
-">
+    <!-- CSP that allows Firebase + optional Google Fonts -->
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src 'self' 'unsafe-inline' https://apis.google.com https://www.gstatic.com;
+      style-src  'self' 'unsafe-inline' https://fonts.googleapis.com;
+      img-src    'self' data: blob: https:;
+      font-src   'self' https://fonts.gstatic.com data:;
+      connect-src 'self'
+        https://firestore.googleapis.com
+        https://identitytoolkit.googleapis.com
+        https://securetoken.googleapis.com
+        https://firebasestorage.googleapis.com
+        https://www.googleapis.com
+        https://apis.google.com
+        https://accounts.google.com
+        https://*.googleapis.com;
+      frame-src 'self' https://accounts.google.com https://*.gstatic.com https://*.google.com https://looz-11581.firebaseapp.com https://looz-11581.web.app;
+      media-src  'self' https:;
+      object-src 'none';
+      base-uri   'self';
+    ">
 
-
-    <!-- Early theme application: prevents light-flash on refresh (kept) -->
+    <!-- Apply theme early to avoid flash -->
     <script>
       (function () {
         try {
@@ -56,26 +56,17 @@
         } catch (_) {}
       })();
     </script>
-
-    <!-- (optional) PWA manifest hook — safe to leave commented until we add it
-    <link rel="manifest" href="/manifest.webmanifest">
-    -->
   </head>
   <body>
     <div id="app"></div>
 
     <!-- IMPORTANT:
-         We removed the Firebase CDN bootstrapping you had here to avoid
-         *double initialization*. Your app already initializes Firebase once
-         in /src/core/firebase.js using the npm 'firebase' package. Keep your
-         keys in .env.local as VITE_FB_* (as you’ve been doing).
+         Do NOT include Firebase CDN scripts here; the app initializes Firebase
+         once via /src/core/firebase.js with Vite env variables (VITE_FB_*).
+         Ensure .env.production exists during the build on GitHub Pages.
     -->
 
     <!-- Vite entry -->
-     <!-- keep it before /src/main.js -->
-<script src="/firebase-config.js"></script>
-<script type="module" src="/src/main.js"></script>
-
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
